// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotBeverage should render correctly 1`] = `
<div>
  <p>
    The beverage contains 
    nothing
  </p>
  <button
    onClick={[Function]}
  >
    Pour in some tea
  </button>
</div>
`;

exports[`HotBeverage should render correctly when pouring in tea 1`] = `
<div>
  <p>
    The beverage contains 
    tea
  </p>
  <button
    onClick={[Function]}
  >
    Pour in some tea
  </button>
</div>
`;
